# sqlite-zstd

./: Cargo.toml
.github/workflows/: pypi_release.yml
python/: README.md  pyproject.toml
src/: basic.rs
