[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-zstd"
requires-python = ">=3.9"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.datasette]
sqlite_zstd = "sqlite_zstd.datasette"

[tool.setuptools.package-dir]
sqlite_zstd = "lib"

[tool.setuptools_scm]
root = ".."

[[tool.setuptools-rust.ext-modules]]
target = "sqlite_zstd.libsqlite_zstd"
path = "../Cargo.toml"
binding = "NoBinding"
features = ["build_extension"]

[tool.distutils.bdist_wheel]
py_limited_api = "cp39"
